--- a/index.html
+++ b/index.html
@@ -309,13 +309,13 @@ const ANNOUNCEMENT_CONFIG = {
 
     // متن اصلی اعلامیه شما در اینجا قرار می‌گیرد.
     // می‌توانید از \n برای رفتن به خط بعد استفاده کنید.
-    text: "ویژگی لیست پیگیری (Watchlist) اکنون دارای نشانگر روند صعودی و نزولی است! \nهمچنین می‌توانید ارزها را مستقیماً از لیست حذف کنید.",
+    text: "ما درحال بروزرسانی و توقیت کد نویسی و عناصر UI کاربری هستیم و لطفا تا پایان این بروزرسانی منتظر بمانید.",
 
     // متن دکمه تأیید
-    buttonText: "فهمیدم!",
+    buttonText: "اوکی!",
 
     // آدرس تصویر بنر (اختیاری). می‌توانید آدرس تصویر خودتان را قرار دهید.
-    imageUrl: "https://cdn.imgurl.ir/uploads/g38962_.webp" // یک تصویر طومار به عنوان نمونه
+    imageUrl: "" // یک تصویر طومار به عنوان نمونه
 
     // 🔼🔼🔼 پایان بخش ویرایش 🔼🔼🔼
 };
