--- a/index.html
+++ b/index.html
@@ -302,14 +302,14 @@ const ANNOUNCEMENT_CONFIG = {
     // یک شناسه منحصر به فرد برای این اعلامیه. هر بار که متن را تغییر می‌دهید،
     // این شناسه را هم عوض کنید (مثلاً تاریخ امروز: "v20240521").
     // این کار باعث می‌شود اعلامیه جدید به کاربرانی که قبلی را دیده‌اند هم نمایش داده شود.
-    id: "v20240521-1",
+    id: "v20240521-2",
 
     // عنوان اعلامیه
     title: "یک به‌روزرسانی مهم!",
 
     // متن اصلی اعلامیه شما در اینجا قرار می‌گیرد.
     // می‌توانید از \n برای رفتن به خط بعد استفاده کنید.
-    text: "ما درحال بروزرسانی و توقیت کد نویسی و عناصر UI کاربری هستیم و لطفا تا پایان این بروزرسانی منتظر بمانید.",
+    text: "ما درحال بروزرسانی و تقویت کد نویسی و عناصر UI کاربری هستیم و لطفا تا پایان این بروزرسانی منتظر بمانید.",
 
     // متن دکمه تأیید
     buttonText: "اوکی!",
