--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@ const ANNOUNCEMENT_CONFIG = {
 
     // آدرس تصویر بنر (اختیاری). می‌توانید آدرس تصویر خودتان را قرار دهید.
     // برای نمونه: ""
-    imageUrl: "https://images.unsplash.com/photo-1611605698335-8b1569810432?q=80&w=1974&auto=format&fit=crop"
+    imageUrl: ""
 
     // 🔼🔼🔼 پایان بخش ویرایش 🔼🔼🔼
 };
