--- a/index.html
+++ b/index.html
@@ -314,8 +314,8 @@ const ANNOUNCEMENT_CONFIG = {
     buttonText: "فهمیدم!",
 
     // آدرس تصویر بنر (اختیاری). می‌توانید آدرس تصویر خودتان را قرار دهید.
-    // برای نمونه: ""
-    imageUrl: ""
+    // برای نمونه: "https://example.com/banner.jpg"
+    imageUrl: "https://images.unsplash.com/photo-1611605698335-8b1569810432?q=80&w=1974&auto=format&fit=crop"
 
     // 🔼🔼🔼 پایان بخش ویرایش 🔼🔼🔼
 };
