--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@ const ANNOUNCEMENT_CONFIG = {
     // یک شناسه منحصر به فرد برای این اعلامیه. هر بار که متن را تغییر می‌دهید،
     // این شناسه را هم عوض کنید (مثلاً تاریخ امروز: "v20240521").
     // این کار باعث می‌شود اعلامیه جدید به کاربرانی که قبلی را دیده‌اند هم نمایش داده شود.
-    id: "v20240521-ui-update",
+    id: "v20240521-ui-update1",
 
     // عنوان اعلامیه
     title: "به‌روزرسانی جدید و هیجان‌انگیز!",
